...

    var title: String {
        switch self {
        case .searchBook:
            return "검색"
        case .image:
            return "이미지"
        case .bookMark:
            return "북마크"
        case .photoViewer:
            return "사진첩"
        }
    }

    var iconImage: Image {
...
