...
                CustomTextField(searchText: $searchText, option: .search, placeholder: "Search")
                    .onChange(of: searchText) { text in

                        viewModel.setSearchText(text)
                    }
                    .padding(.horizontal, 8)
                    .accessibilityIdentifier("bookSearchTextField")

                switch viewModel.state {
                case .empty(let emptyModel):

                    StatePrintView(stateModel: emptyModel)
                case .error(let errorModel):
...
