...
        }
    }

    private var imageCard: some View {
        VStack {
            thumbnailView
                .accessibilityIdentifier("imageSearchThumbnail")
                .onTapGesture {
                    coordinator.push(.detail(url: element.imageUrl))
                }

            setText(text: element.printTitle)
                .allowsHitTesting(false)
...
